--- a/src/resources/views/internet_combo.hbs
+++ b/src/resources/views/internet_combo.hbs
@@ -73,24 +73,34 @@
                             <div class="row">
                                 {{#each icombo}}
                                 <div class="col-sm-4">
-                                    <div class="card bg-info">
-                                        <div class="card-body">
-                                            <h5 class="card-title" style="color: #FF9900;">{{this.name_combo}}</h5>
-                                            <br>
+                                    <div class="card" style="border: 1px solid #e5e5e5;">
+                                        <div class="card-body ">
+                                            <h1 class="card-title"
+                                                style="color: #728092;font-size:25px;font-weight: bold;text-align: center;width: 100%;">
+                                                {{this.name_combo}}</h1>
+                                            <br><br>
                                             <hr>
-                                            <p style="color: #33FFFF;">Băng thông</p>
-                                            <p style="color: red;">{{this.data_combo}}</p>
-                                            <p style="color: red;">Phạm vi áp dụng</p>
+                                            <p class="price" style="color:#EE0033;font-faimily:  roboto;">{{this.price_combo}}(VNĐ)/1 Tháng</p>
+                                            <hr>
+                                            <p style="color: #252525;font-weight: bold;">Băng thông</p>
+                                            <p style="color: #252525;">{{this.data_combo}}</p>
+                                            <p style="color: #252525;font-weight: bold;">Phạm vi áp dụng</p>
                                             <p>{{this.range}}</p>
-                                            <p href="#" data-toggle="tooltip" data-placement="top"
-                                                title="{{this.promotions_combo}}" style="color: #33FFFF;">Chi tiết
-                                                khuyến mãi</p>
-                                            <p class="price">{{this.price_combo}}(VNĐ)/1 Tháng</p>
+                                            <p style="color: #252525;font-weight: bold;">Khuyến mãi</p>
+                                            <p>{{this.promotions_combo}}</p>
+                                            
+                                            <div class="row">
+                                                <div class="col">
+                                                    <button type="button" class="btn btn-danger" data-toggle="modal"
+                                                        data-target="#combos"  style="width: 100%;">
+                                                        Đăng ký
+                                                    </button>
+                                                </div>
+                                                
 
-                                            <button type="button" class="btn btn-danger" data-toggle="modal"
-                                                data-target="#combos">
-                                                Đăng ký
-                                            </button>
+                                            </div>
+
+
                                         </div>
                                     </div>
                                 </div>
