--- a/src/resources/views/partials/footer.hbs
+++ b/src/resources/views/partials/footer.hbs
@@ -1,6 +1,6 @@
 
 <!-- Footer -->
-<footer class="bg-white text-center text-white x">
+<footer class=" text-center text-white " style="background-color: #f0f0f0;">
   <!-- Grid container -->
   <div class="container p-4 footer-color">
     <!-- Section: Social media -->
@@ -92,7 +92,7 @@
       <div class="row">
         <!--Grid column-->
         <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-          <a class="text-uppercase" href="/"><img src="img/logovt.png" alt="VIETTEL" class="img-boder-radius"></a>
+          <a class="text-uppercase" href="/"><img src="img/logovt_edit.png" alt="VIETTEL" class="img-boder-radius"></a>
           
 
           {{!-- <ul class="list-unstyled mb-0">
