--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,6 +1,6 @@
 <div class="menu">
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
-        <a class="nav-link" href="/" ><img src="img/logovt_tccb.png" alt="VIETTEL"
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ffffff;">
+        <a class="nav-link" href="/" ><img src="img/logovt_vtedit.png" alt="VIETTEL"
                 style="width: auto;height:auto;"> <span class="sr-only">(current)</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
