--- a/src/resources/views/partials/footer_admin.hbs
+++ b/src/resources/views/partials/footer_admin.hbs
@@ -28,7 +28,7 @@
                with font-awesome or any other icon font library -->
 
             <li class="nav-item">
-              <a href="/admin" class="nav-link">
+              <a href="/danhsach_dk" class="nav-link">
                 <i class="nav-icon fas fa-th"></i>
                 <p>
                   Danh sách đăng ký
@@ -37,7 +37,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="/goicuocdoanhnghiep" class="nav-link">
+              <a href="/goicuocdoanhnghiep" class="nav-link" name="iframe_t">
                 <i class="nav-icon fas fa-th"></i>
                 <p>
                   Gói cước Doanh Nghiệp
