--- a/src/resources/views/partials/header_admin.hbs
+++ b/src/resources/views/partials/header_admin.hbs
@@ -22,13 +22,15 @@
         
         
 
-
-
-        
+        {{#if token}}
+          <li class="nav-item">
+          <p class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">
+            XIN CHÀO ADMIN
+          </p>
+        </li>
+        {{/if}}
         <li class="nav-item">
-          <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">
-            <i class="fas fa-th-large"></i>
-          </a>
+          
         </li>
       </ul>
     </nav>
