--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -53,6 +53,11 @@
 
                                             </select>
                                         </div>
+                                        <div class="form-group">
+                                           
+                                            <input type="hidden" class="form-control" value="0"
+                                                name="status" id="status">
+                                        </div>
                                         <button type="submit" class="btn btn-primary" onclick="handleSubmit()">Đăng
                                             ký</button>
                                     </form>
@@ -156,6 +161,11 @@
                                                 {{/each }}
 
                                             </select>
+                                        </div>
+                                        <div class="form-group">
+                                           
+                                            <input type="hidden" class="form-control" value="0"
+                                                name="status" id="status">
                                         </div>
                                         <button type="submit" class="btn btn-primary" onclick="handleSubmit()">Đăng
                                             ký</button>
@@ -263,6 +273,11 @@
                                                 {{/each }}
 
                                             </select>
+                                        </div>
+                                        <div class="form-group">
+                                           
+                                            <input type="hidden" class="form-control" value="0"
+                                                name="status" id="status">
                                         </div>
                                         <button type="submit" class="btn btn-primary" onclick="handleSubmit()">Đăng
                                             ký</button>
