--- a/src/resources/views/internet_combo.hbs
+++ b/src/resources/views/internet_combo.hbs
@@ -58,6 +58,11 @@
 
                                             </select>
                                         </div>
+                                        <div class="form-group">
+                                           
+                                            <input type="hidden" class="form-control" value="0"
+                                                name="status" id="status">
+                                        </div>
                                         <button type="submit" class="btn btn-primary" onclick="handleSubmit()">Đăng
                                             ký</button>
                                     </form>
