--- a/src/resources/views/admin.hbs
+++ b/src/resources/views/admin.hbs
@@ -30,7 +30,7 @@
         <li><a href="/goicuocgiadinh" target="ifarm_admin">Gói cước gia đình</a></li><br>
         <li><a href="/combo" target="ifarm_admin">COMBO gói cước</a></li><br>
         <li><a href="/promotion" target="ifarm_admin">Khuyến mãi</a></li>
-        
+        <li><a href="/phone" target="ifarm_admin">Chỉnh sửa Số điện thoại</a></li>
       </ul>
     </div>
     <div class="col-sm-10 bg-left">
