update header phone

--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -82,7 +82,7 @@
                                                 {{this.name_goicuoc}}</h1>
                                             <br>
                                             <hr>
-                                            <p class="price" style="color:#EE0033;font-faimily:  roboto;">{{this.price}}(VNĐ)/1 Tháng</p>
+                                            <p class="price" style="color:#EE0033;font-faimily:  roboto;" id="price_doanhnghiep">{{this.price}}(VNĐ)/1 Tháng</p>
                                             <hr>
                                             <p style="color: #252525;font-weight: bold;">Băng thông</p>
                                             <p style="color: #252525;">Trong nước : {{this.data_tn}}</p>
